fix favicon and apple-touch-icon

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,8 @@
     {%- include google-analytics.html -%}
   {%- endif -%}
 
-  <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
+  <link rel="shortcut icon" type="image/x-icon" href="/get-started-ros2/favicon.ico">
+  <link rel="apple-touch-icon" href="/get-started-ros2/img/apple-touch-icon.png">
   <meta name="twitter:creator" content="@{{ site.twitter_username }}">
   {% if page.image %}
   <meta name="twitter:card" content="summary_large_image">
